# MCP_TRADING_SERVER

./: .env  README.md  main.py  pyproject.toml  trade.py
